Update to use `Paths.get` instead of `Path.of` for jdk8 compatibility (#543)